--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,1 +1,36 @@
+@import "bootstrap_custom";
 @import "bootstrap";
+@import "common";
+@import "matters";
+
+#dark-navbar {
+  padding-top: 4px;
+  padding-bottom: 3px;
+  background: #0767c8;
+  background: -webkit-linear-gradient(top,#086ed5,#055db5);
+  background: linear-gradient(to bottom,#086ed5,#055db5);
+  border-bottom: 1px solid #044e97;
+  box-shadow: 0 1px 2px rgba(0,0,0,.25), inset 0 1px 0 rgba(255,255,255,.15);
+  ul > li > a {
+    color: #eee;
+    &:hover, &:focus {
+      color: #fff;
+    }
+  }
+}
+
+#light-navbar {
+  padding-top: 4px;
+  padding-bottom: 3px;
+  // background: #0767c8;
+  // background: -webkit-linear-gradient(top,#086ed5,#055db5);
+  // background: linear-gradient(to bottom,#086ed5,#055db5);
+  // border-bottom: 1px solid #044e97;
+  box-shadow: 0 1px 2px rgba(0,0,0,.25), inset 0 1px 0 rgba(255,255,255,.15);
+  ul > li > a {
+    color: $cs1-light-gray;
+    &:hover, &:focus {
+      color: $cs1-dark-blue;
+    }
+  }
+}
